Fixed spacing issue with margin-top on sidebar

--- a/src/ui/Header/index.css
+++ b/src/ui/Header/index.css
@@ -125,6 +125,6 @@ hr {
 
 .sidebarall {
   position: fixed;
-  margin-top: 24px;
+  margin-top: 40px;
   margin-left: -56px;
 }
